# AlphaCompiler

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  quads.txt
Compiler/: parser.y  scanner.l
Compiler/bison/: bison.h  bisonUtils.c
Compiler/lex/: lexUtils.l  lexer.h
Compiler/targetCode/: binary.c  constTables.c  funcStartTarget.c  operands.c  targetCode.h
VirtualMachine/: main.c  main.h
VirtualMachine/tools/: binaryDecoder.c  dispatcher.c  memoryManager.c  tools.h
test/: debug.txt
test/phase1/: test_lex.alpha
test/phase3/: p3t_assignments_objects.asc  p3t_calls.asc
